--- a/page1.html
+++ b/page1.html
@@ -378,7 +378,7 @@ LEFT:480PX;
   <img src="lpu2.jpg" style="width:100%; height:300px;">
 </div>
 <div class="mySlides" style="width: 1300px; height: 300px;">
-  <img src="lpu3.jpg" style="width:100%; height:300px;">
+  <img src="3.jpg" style="width:100%; height:300px;">
 </div>
 <div class="mySlides" style="width: 1300px; height: 300px;">
   <img src="lpu4.jpg" style="width:100%; height:300px;">
