--- a/chatbox.html
+++ b/chatbox.html
@@ -3,7 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-<!--
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
@@ -75,7 +74,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
-}-->
+}
 table.tab1
 {
 border-collapse:collapse;
@@ -344,11 +343,7 @@ LEFT:480PX;
     background-size: 400px;
 }
 </style>
-<!--Start of Tawk.to Script-->
-
-<!--End of Tawk.to Script-->
 </head>
-
 <body>
 <div id="header">
 <img id="logo" src="logo.png" width="100" height="40">
@@ -378,6 +373,9 @@ LEFT:480PX;
   <img src="lpu2.jpg" style="width:100%; height:300px;">
 </div>
 <div class="mySlides" style="width: 1300px; height: 300px;">
+  <img src="lpu3.jpg" style="width:100%; height:300px;">
+</div>
+<div class="mySlides" style="width: 1300px; height: 300px;">
   <img src="lpu4.jpg" style="width:100%; height:300px;">
 </div>
 </div>
@@ -390,16 +388,6 @@ LEFT:480PX;
 </div>
 
 <script>
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5dedfd88d96992700fcb6308/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-
 var slideIndex = 0;
 showSlides();
 
@@ -446,7 +434,7 @@ function closeForm() {
 
 
 
-<!--<button class="open-button" onclick="openForm()">Chat</button>
+<button class="open-button" onclick="openForm()">Chat</button>
 
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
@@ -468,8 +456,7 @@ function openForm() {
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
-</script>-->
+</script>
 
 </body>
-
 </html>
