--- a/page1.html
+++ b/page1.html
@@ -431,7 +431,7 @@ function closeForm() {
 <DIV CLASS="News">
 <P><H1>Latest News About University</H1></P>
 </DIV>
-<a  class="news1" ></a><a  class="news2" ></a><a  class="news3" ></a><a  class="news4" ></a><a  class="news5" ></a><a  class="news6" ></a>
+<a  class="news1" ><img src="LPU1.jpg" style="width:100%; height:300px;"></a><a  class="news2" ></a><a  class="news3" ></a><a  class="news4" ></a><a  class="news5" ></a><a  class="news6" ></a>
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
     <h1>Chat</h1>
