--- a/page1.html
+++ b/page1.html
@@ -237,7 +237,7 @@ LEFT:480PX;
 }
 .news1 {
 
-	background-image: url(news1.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news1.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -255,7 +255,7 @@ LEFT:480PX;
 }
 .news2 {
 
-	background-image: url(news2.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news2.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -273,7 +273,7 @@ LEFT:480PX;
 }
 .news3 {
 
-	background-image: url(news3.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news3.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -291,7 +291,7 @@ LEFT:480PX;
 }
 .news4 {
 
-	background-image: url(news4.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news4.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -309,7 +309,7 @@ LEFT:480PX;
 }
 .news5 {
 
-	background-image: url(news5.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news5.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -327,7 +327,7 @@ LEFT:480PX;
 }
 .news6 {
 
-	background-image: url(news6.png);
+	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news1.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -431,7 +431,7 @@ function closeForm() {
 <DIV CLASS="News">
 <P><H1>Latest News About University</H1></P>
 </DIV>
-<a  class="news1" ><img src="LPU1.jpg" style="width:100%; height:300px;"></a><a  class="news2" ></a><a  class="news3" ></a><a  class="news4" ></a><a  class="news5" ></a><a  class="news6" ></a>
+<a  class="news1" ></a><a  class="news2" ></a><a  class="news3" ></a><a  class="news4" ></a><a  class="news5" ></a><a  class="news6" ></a>
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
     <h1>Chat</h1>
