--- a/page1.html
+++ b/page1.html
@@ -327,7 +327,7 @@ LEFT:480PX;
 }
 .news6 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news1.PNG);
+	background-image: url(lpu1.jpg);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
