--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,21 @@ position:fixed;
 top:200px;
 left:870px;
 }
+.img1{
+position:absolute;
+top:0px;
+left:470px;
+}
+.img2{
+position:absolute;
+top:10px;
+left:480px;
+}
+.img3{
+position:absolute;
+top:20px;
+left:480px;
+}
 .addrs{
 position:absolute;
 top:100px;
@@ -146,17 +161,20 @@ left:10px;
 </div>
 <div class="fb">
 <h3>You can Find, Follow and Message Us on Facebook</h3>
+<div class="img1"><a href="https://www.facebook.com/LPUUniversity/"><img src="fb.png" style="width:100px; height:50px;"></a></div>
 </div>
 <div class="insta">
 <h3>Follow us on Instagram for latest update</h3>
+<div class="img2"><a href="https://www.instagram.com/lpuuniversity/"><img src="insta.png" style="width:70px; height:50px;"></a></div>
 </div>
 <div class="tweet">
 <h3>Follow us on Twitter for latest update</h3>
+<div class="img3"><a href="https://twitter.com/lpuuniversity"><img src="tweet.png" style="width:70px; height:50px;"></a></div>
 </div>
 <div class="map">
 <h1>Locate Us!</h1>
 </div>
-<div class="img"><img src="map.jpg" style="width:300px; height:300px;"></div>
+<div class="img"><a href="https://www.google.com/maps/place/Lovely+Professional+University/@31.2551892,75.7044857,19z/data=!3m1!4b1!4m5!3m4!1s0x391a5a594d22b88d:0x4cc934c58d0992ec!8m2!3d31.2551881!4d75.7050329"><img src="map.jpg" style="width:300px; height:300px;"></a></div>
 
 </div>
 <div class="addrs"><img src="add.png" style="width:600px; height:150px;"></div>
