--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>LPU</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 <!--
@@ -237,7 +238,7 @@ LEFT:480PX;
 }
 .news1 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news1.PNG);
+	background-image: url(news1.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -255,7 +256,7 @@ LEFT:480PX;
 }
 .news2 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news2.PNG);
+	background-image: url(news2.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -273,7 +274,7 @@ LEFT:480PX;
 }
 .news3 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news3.PNG);
+	background-image: url(news3.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -291,7 +292,7 @@ LEFT:480PX;
 }
 .news4 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news4.PNG);
+	background-image: url(news4.PNG);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -309,7 +310,7 @@ LEFT:480PX;
 }
 .news5 {
 
-	background-image: url(https://github.com/sunnybarnwal/Website/blob/master/news5.PNG);
+	background-image: url(news5.png);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
@@ -327,7 +328,7 @@ LEFT:480PX;
 }
 .news6 {
 
-	background-image: url(lpu1.jpg);
+	background-image: url(news6.png);
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
