--- a/page1.html
+++ b/page1.html
@@ -4,21 +4,20 @@
 <title>LPU</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-<!--
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 /* Button used to open the chat form - fixed at the bottom of the page */
 .open-button {
-  background-color: black;
+  background-color: #555;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 2px;
-  right: 2px;
+  bottom: 23px;
+  right: 28px;
   width: 280px;
 }
 
@@ -76,7 +75,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
-}-->
+}
 table.tab1
 {
 border-collapse:collapse;
@@ -447,7 +446,7 @@ function closeForm() {
 
 
 
-<!--<button class="open-button" onclick="openForm()">Chat</button>
+<button class="open-button" onclick="openForm()">Chat</button>
 
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
@@ -469,7 +468,7 @@ function openForm() {
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
-</script>-->
+</script>
 
 </body>
 
