--- a/happening.html
+++ b/happening.html
@@ -86,7 +86,6 @@ left:370px;
   <a href="aboutlpu.html"><button class="button">About Us</button></a>
   <a href="admission.html"><button class="button">Admissions</button></a>
   <a href="place.html"><button class="button">Placements</button></a>
-  <a href="login.html"><button class="button">Jobs</button></a>
   <a href="happening.html"><button class="button">Happenings</button></a>
   </div>
 
@@ -103,7 +102,7 @@ left:370px;
   <div class="column">
 <h2>GLOW RUN-Electrica</h2>
     <img src="marathon.jpg" alt="Snow" style="width:100%">
-<p ">Lovely Professional University witnessed an amazing night running event
+<p >Lovely Professional University witnessed an amazing night running event
  GLOW RUN-Electrica, organised by a student’s organisation CLUB TWENTY,
  on the night of 8th of November 2019. The event was all about running in the glowing
  accessories on a music-filled path with four social campaigns to promote.       
